# gnome-html-desktop

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
data/: Makefile.am  org.anthonos.icenowy.htmldesktop.gschema.xml
src/: Makefile.am  main.c
